-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.831 2010-12-03 03:29:41 guru Exp $
-----------------------------------------------------------------------------------------

2010-12-02	pwessel
	* x2sys/x2sys.c:	Minor bug in x2sys binary reading of floats

2010-11-30	pwessel
	* xyz2grd.c:		Do not tolerate NaNs in x,y and give error (e.g., if junk is given).

2010-11-23	pwessel
	* grdmask.c:		Must skip "polygons" with less than 3 points.  Also, the
				resampling distance for spherical data was wrong, now 0.1 degrees.
	* misc/gmt2kml.c:	Options -N+ and -D would crash under Windows (usual DLL hell).

2010-11-19	pwessel
	* grd2xyz.c:		Extended -Ef mode to write floats (patch by Pierre Cazenave).
	* gmtselect.c:		Due to resampling of parallels in -N, some points exactly on
				a coast bin parallel could fail the test due to roundoff.
				Fixed by not resampling coastlines since it is a Cartesian test.
	* grdlandmask.c:	Same.
				
2010-11-18	pwessel
	* gmt_io.c:		When ASCII mode, also need to save/restore any netcdf i/o settings.
	* gmt_map.c:		We have a safety valve for preventing a painful slow search
				around the map perimeter.  The search is appropriate for maps
				but not for mapproject results.  The limit was for 200 inch
				wide maps == 14400p.  A user ran pscoast with 14401p and was
				caught.  Now check for 400 inch and also check current page
				size (PAPER_MEDIA). If map width vastly outsizes the paper
				size then it is probably a projection job.
	* pslegend.c:		Need to keep the original -R around since it may be -R....r
	* xyz2grd.c:		Failed if -Evalue was given and the ESRI grid already had a
				nodata_value line.  Now will process this line, if present.
				The value given on the command line will override any setting
				found in the file.  Also made string-checks case-insensitive.
	* gmt_support.c:	GMT_inonout_sphpol_count failed to detect crossings if a